fixing button colors + spacing edge cases

--- a/app/bundles/CoreBundle/Assets/css/app/less/components/buttons.less
+++ b/app/bundles/CoreBundle/Assets/css/app/less/components/buttons.less
@@ -155,7 +155,6 @@
     @disabled-background: transparent,
     @disabled-text-color: var(--text-disabled)
   );
-  margin-left: -1px;
 
   /// Tertiary danger
   &.btn-danger {
